# xapes

./: .gitignore  DATABASE_MIGRATION.md  DATABASE_SETUP.md  DEPLOYMENT.md  DIY_SLOT_MACHINE_GUIDE.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_GUIDE.md  README.md  SECURITY.md  SETUP_INSTRUCTIONS.md  SLOT_MACHINE_PLAN.md  SLOT_MACHINE_STATISTICS.md  generate-keypair.js  get-treasury-key.js  index.html  package-lock.json  package.json  script.js  slots.css  slots.html  slots.js  styles.css  vercel.json
api/: README.md  collect.js  confirm-collect.js  game-stats.js  leaderboard.js  load-player.js  save-game.js
database/: migration_add_cost_per_spin.sql  migration_add_spins_remaining.sql  schema.sql
public/: index.html  slots.css  slots.html  slots.js  styles.css
slot-machine/: Anchor.toml  Cargo.toml  README.md  package.json  setup.sh
slot-machine/app/src/components/: SlotMachine.css  SlotMachine.jsx
slot-machine/app/src/idl/: slot_machine.json
slot-machine/programs/slot-machine/src/: lib.rs
