[package]
name = "slot-machine"
version = "0.1.0"
description = "XMA Token Slot Machine"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "slot_machine"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
